# RUDP

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Protocol.md  README.md  docker-compose.yml  readme.md  vcpkg.json
configs/: client.yaml  server.yaml
docker/: rudp.Dockerfile
docs/: Protocol.md  README.md  architecture.md  project_overview.json  protocol-comparison.md  server-session-manager.md  session-types.md  tx-rx-notes.md
include/: ConsoleLogPlugin.hpp  PacketHelper.hpp  Plugin.hpp  RudpSocket.hpp  SocketTools.hpp  protocol.hpp
include/Rudp/: BsdClientApp.hpp  BsdRuntime.hpp  BsdServerApp.hpp  BsdUdpSocket.hpp  Codec.hpp  Config.hpp  ConnectionStateMachine.hpp  Protocol.hpp  ReliableRx.hpp  RuntimeLogger.hpp  RxHandler.hpp  ServerSessionManager.hpp  Session.hpp  SessionTypes.hpp  TxHandler.hpp  Utils.hpp
scripts/: export_experiment_csv.zsh  run_netem_experiment.zsh  run_netem_matrix.zsh  run_rudp.zsh
src/: BsdClientApp.cpp  BsdRuntime.cpp  BsdServerApp.cpp  BsdUdpSocket.cpp  Codec.cpp  Config.cpp  ConnectionStateMachine.cpp  Protocol.cpp  ReliableRx.cpp  RuntimeLogger.cpp  RxHandler.cpp  ServerSessionManager.cpp  Session.cpp  TxHandler.cpp  Utils.cpp  main.cpp
test/: main.cpp
tests/: test_codec_header_v1.cpp  test_config_yaml.cpp  test_connection_state_machine.cpp  test_reliable_rx.cpp  test_rx_handler_wrap.cpp  test_server_session_manager.cpp  test_session_client_handshake.cpp  test_session_skeleton.cpp  test_session_tick.cpp  test_tx_handler_ack.cpp  test_utils_endian.cpp
